Added react routing to the index.js and App.js  files.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,10 @@
     min-height: 100vh;
 }
 
+.Main {
+    padding-top: 80px;
+}
+
 .verticalLine {
     border-left: 1px solid grey;
     height: 30px;
