Added default image for no job advert data. List jobs adds for current user in their display for employer profile. Show loading spinner when data is rendering.

--- a/src/styles/JobsCreateForm.module.css
+++ b/src/styles/JobsCreateForm.module.css
@@ -18,3 +18,17 @@ h1 {
     font-size: 26px;
     font-weight: 800;
 }
+
+.defaultImage {
+    width: 50vw;
+
+
+}
+
+.customUl {
+    text-align: left;
+}
+
+.minHeightContent {
+    min-height: 60vh;
+}
