Added styling to JobCreateForm. Left container shows users recent listings dynamically. Default listings are now visible mapped through an array. Recent listings can be deleted.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -22,7 +22,6 @@
 }
 
 
-
 .verticalLine {
     border-left: 1px solid grey;
     height: 30px;
@@ -38,6 +37,10 @@
 
 input[type="file"] {
     display: none;
+}
+
+.myPointer {
+    cursor: pointer;
 }
 
 /* scrollbar */
