--- a/src/styles/JobsCreateForm.module.css
+++ b/src/styles/JobsCreateForm.module.css
@@ -16,13 +16,16 @@
 
 h1 {
     font-size: 26px;
-    font-weight: 800;
+    font-weight: 300;
+}
+
+h2 {
+    font-size: 24px;
+    font-weight: 500;
 }
 
 .defaultImage {
     width: 50vw;
-
-
 }
 
 .customUl {
