Add BottomNavBar component and styling. Add further styling and media queries to the NavBar and JobsPageHome. Add like button.

--- a/src/styles/JobsPost.module.css
+++ b/src/styles/JobsPost.module.css
@@ -9,3 +9,23 @@
 .JobPostBody {
     background-color: #fc7fb6;
 }
+
+.Heart {
+    color: #fc7fb6;
+}
+
+.Heart:hover {
+    color: #7e4961;
+}
+
+.HeartOutline:hover {
+    color: #fc7fb6;
+}
+
+.HeartSize {
+    font-size: 19px;
+}
+
+.Background {
+    background-color: #fc7fb6;
+}
