Fix signout button media queries for mobile.

--- a/src/styles/BottomNav.module.css
+++ b/src/styles/BottomNav.module.css
@@ -71,12 +71,22 @@
     }
 }
 
+@media (min-width: 576px) {
+
+
+    .HideSignOut {
+        display: none;
+    }
+}
+
 
 @media (min-width: 425px) {
     .IconText {
         font-size: 10px;
         /* Adjust the font size for smaller screens */
     }
+
+
 }
 
 
