--- a/src/styles/JobsPost.module.css
+++ b/src/styles/JobsPost.module.css
@@ -24,8 +24,14 @@
 
 .HeartSize {
     font-size: 19px;
+    color: #ca417f;
 }
 
 .Background {
     background-color: #fc7fb6;
+}
+
+.Tooltip {
+    background-color: #fc7fb6;
+    width: 100%;
 }
