Fix dropdown toggle console errors.

--- a/src/styles/BottomNav.module.css
+++ b/src/styles/BottomNav.module.css
@@ -13,6 +13,12 @@
 
 }
 
+.Active {
+    color: #fc7fb6 !important;
+    text-decoration: white !important;
+    /* Change the color to your desired active color */
+}
+
 
 .BottomNavBar {
     width: 100%;
