--- a/src/styles/JobAdListItem.module.css
+++ b/src/styles/JobAdListItem.module.css
@@ -14,6 +14,13 @@
 
 }
 
+.ArrowDown {
+    margin-top: 4px;
+    position: relative;
+    cursor: pointer;
+    bottom: -3px;
+}
+
 
 @media (max-width: 500px) {
 
