--- a/src/styles/JobAdListItem.module.css
+++ b/src/styles/JobAdListItem.module.css
@@ -28,6 +28,34 @@
     bottom: -3px;
 }
 
+.jobEnd {
+    font-weight: bold;
+}
+
+
+.ActiveTick {
+    color: #41EAD4;
+    font-weight: bold;
+
+}
+
+.ActiveCross {
+    color: #F34213;
+    font-weight: bold;
+}
+
+
+.ListingClosed {
+    /* background-color: #FBFF12; */
+    color: black;
+    /* Text color */
+    padding: 5px 10px;
+    /* Padding around the text */
+    border-radius: 5px;
+    /* Rounded corners */
+    font-weight: bold;
+    /* Bold text */
+}
 
 
 @media (max-width: 500px) {
@@ -70,6 +98,20 @@
 
 
     }
+
+    .ListingClosed {
+        font-size: 0.75rem;
+    }
+
+    .ActiveTick {
+        margin-top: 6px;
+
+    }
+
+    .ActiveCross {
+        margin-top: 6px;
+    }
+
 
     /* Remove width: 100% from container classes */
     .Container,
@@ -130,6 +172,10 @@
 
     }
 
+    .ListingClosed {
+        font-size: 0.65rem;
+    }
+
     .jobEndBox {
         width: 220px;
         height: 40px;
@@ -185,6 +231,10 @@
         margin-left: auto;
         margin-right: auto;
 
+    }
+
+    .ListingClosed {
+        font-size: 0.55rem;
     }
 
     .jobEndBox {
