--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,6 +2,7 @@
     font-family: 'DM Sans';
     background-color: #f8f8f8;
     min-height: 100vh;
+    text-decoration: none !important;
 }
 
 .Content {
@@ -9,12 +10,13 @@
     padding: 10px;
     border-radius: 4px;
     border: 1px solid #dadadf;
+    text-decoration: none !important;
 
 }
 
 .Main {
     padding: 25px;
-
+    text-decoration: none !important;
 }
 
 * {
