Fix job listings order by closing date and add filtering logic. Remove job listings that are closed from the home page.

--- a/src/styles/JobsCreateForm.module.css
+++ b/src/styles/JobsCreateForm.module.css
@@ -2,6 +2,10 @@
     position: relative;
 }
 
+.Pointer {
+    cursor: pointer;
+}
+
 .triangleGradient::before {
     content: '';
     position: absolute;
