--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,7 +11,18 @@
     border-radius: 4px;
     border: 1px solid #dadadf;
 
+}
 
+.Button {
+    text-decoration: none !important;
+}
+
+.Button:hover {
+    text-decoration: none !important;
+}
+
+.Button:active {
+    text-decoration: none !important;
 }
 
 .Main {
