Fix nav search bar funtionality. posts users to the home bag to search for their job query. Added futher utility to ConnectionsPage. Needs to be broken down into smaller components.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,6 +13,11 @@
 
 }
 
+.Background {
+    background-color: #fc7fb6;
+    color: #ffffff;
+}
+
 .Button {
     text-decoration: none !important;
 }
