--- a/src/styles/DummyBoxes.module.css
+++ b/src/styles/DummyBoxes.module.css
@@ -1,6 +1,6 @@
 .DummyBoxes {
     padding: 12px;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
     background-color: #ffffff;
     border-radius: 4px;
     border: 1px solid #e0e0e0;
@@ -13,4 +13,24 @@
     background-color: #f0f0f0;
     border-radius: 5px;
     padding: 5px;
+}
+
+@keyframes pulsate {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.3;
+
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.Pulsate {
+    animation: pulsate 2.5s infinite;
+
 }
