--- a/src/styles/JobsCreateForm.module.css
+++ b/src/styles/JobsCreateForm.module.css
@@ -6,6 +6,27 @@
     cursor: pointer;
 }
 
+/* Increase specificity to override Bootstrap styles */
+.Button {
+    border-color: #fc7fb6 !important;
+    background-color: #fc7fb6 !important;
+    box-shadow: none !important;
+    color: white !important;
+
+}
+
+.Button:hover {
+    transform: scale(0.95);
+    /* Reduce the size of the button on hover */
+    transition: transform 0.2s ease;
+    /* Add a smooth transition effect */
+}
+
+.Button:active {
+    transform: scale(0.9);
+    /* Further reduce the size when the button is clicked */
+}
+
 .triangleGradient::before {
     content: '';
     position: absolute;
