--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,7 +8,7 @@
 .Content {
     background-color: #ffffff;
     padding: 10px;
-    border-radius: 4px;
+    border-radius: 4px !important;
     border: 1px solid #dadadf;
 
 }
