Added a new layout for ProfileViewPage. Added a notification count to NotificationsPage. Added a profile tab for mobile view.

--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -8,3 +8,11 @@
 .Border {
     border: 3px solid #ffffff;
 }
+
+
+@media (max-width: 468px) {
+    .Avatar {
+        height: 45px !important;
+        width: 45px !important;
+    }
+}
