--- a/src/App.module.css
+++ b/src/App.module.css
@@ -72,9 +72,9 @@ input[type="file"] {
 }
 
 *::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #d4d4d4;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #cfcece;
 }
