--- a/src/styles/Notification.module.css
+++ b/src/styles/Notification.module.css
@@ -1,3 +1,9 @@
+h1 {
+    font-size: 18px !important;
+    margin-top: 0px !important;
+    padding: 0px !important;
+}
+
 h2 {
     font-size: 14px !important;
     margin-top: 0px !important;
