--- a/src/styles/JobsCreateForm.module.css
+++ b/src/styles/JobsCreateForm.module.css
@@ -14,6 +14,12 @@
 
 }
 
+.Form {
+    max-width: 380px;
+    margin: 0 auto;
+
+}
+
 .Button:hover {
     transform: scale(0.95);
     /* Reduce the size of the button on hover */
