--- a/src/styles/Notification.module.css
+++ b/src/styles/Notification.module.css
@@ -1,5 +1,5 @@
 h1 {
-    font-size: 18px !important;
+    font-size: 15px !important;
     margin-top: 0px !important;
     padding: 0px !important;
 }
@@ -70,8 +70,27 @@ h2 {
         font-size: 13px;
     }
 
+    h1 {
+        font-size: 14px !important;
+        margin-top: 0px !important;
+        padding: 0px !important;
+    }
+
     h2 {
         font-size: 10px;
     }
+
+}
+
+@media (max-width: 306px) {
+
+
+    h1 {
+        font-size: 11px !important;
+        margin-top: 0px !important;
+        padding: 0px !important;
+    }
+
+
 
 }
